--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "backend-testing",
+  "name": "koenig",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "table": "node table/table.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +13,9 @@
     "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "knex": "^0.21.21",
     "mongoose": "^6.8.1",
-    "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
-    "socket.io": "^4.5.3",
-    "sqlite3": "^5.1.2"
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
